- Config::getRateLimit() for getting global rate limit configuration depending of middleware.
- Endpoint::cdn() for handling CDN endpoints.
- Endpoint::router() for nesting router files inside the main router.
- Auto-trailing slashes for request and endpoint paths.
- Request::getType() for getting request type.

#### Changed
- DataSlave now uses regex filtering for injected strings (table, cols, conditions and orderBy).
- Request now sanitizes data in different levels of severity.
- MailSlave::getMailTemplate() now uses realpath() to prevent directory traversal attacks.
- MailSlave::setMailerAttachments() now uses realpath() to prevent directory traversal attacks.
- Type enums have been relocated to a new namespace.
- Skeleton has been updated to account for recent changes.
- Template component now allows for nested setters.
- DataType enum now supports 55 data types.
- Router factories specific to each middleware.
- AuthSlave now calls session_start() only when needed, improving performance.

#### Fixed
- Logs are not being stored inside storage directory.
- AuthWorker::autologin() produces a timing attack vulnerability.

#### Removed
- sitePath parameter from Server::getConfiguration(), Server::getTemplate(), Server::getViewRouter(), Server::getApiRouter() 
- getDataItem() method from Request component is getting deprecated.
- getOriginInfo() method from Request component.
- Permissions-Policy meta tag from main.php template.
- initializeServer() method from Server class.
- preload(...) method from Server class.
- isApi() method from Request component.
- new(...) method from Router component.
- configureSecurity(...) method from Config class.

---

### [v0.3] - 2025-12-17
#### Added
- Config::configurePrivacy(...) for defining whether to register logs or restrict what data to register.
- Collection and Item components for handling key-value pair arrays.
- ValidationWorker for validating data such as email addresses or passwords.